Sequencer preview uses last updated scene #54437

Closed
opened 2018-03-27 15:30:59 +02:00 by Clément Foucault · 6 comments

Blender Version
Broken : dff7f55cd0 (2.8 HEAD)
Worked : unknown

Short description of error

The Scene strip preview always use the last updated scene - updating the a scene (changing a scene setting) breaks the sequencer preview and makes this scene render instead of the one specified in the Scene Strip.

Exact steps for others to reproduce the error

You can recreate this file from scratch by adding a new scene, and adding a scene strip in the VSE.

seq_eevee.blend

  • Tweak scene exposure
  • Change current frame

Extra notes

Surprisingly, the render engine is always the one from the Scene Strip scene, even if another scene is rendered.

**Blender Version** Broken : dff7f55cd069 (2.8 HEAD) Worked : unknown **Short description of error** The Scene strip preview always use the last updated scene - updating the a scene (changing a scene setting) breaks the sequencer preview and makes this scene render instead of the one specified in the Scene Strip. **Exact steps for others to reproduce the error** You can recreate this file from scratch by adding a new scene, and adding a scene strip in the VSE. [seq_eevee.blend](https://archive.blender.org/developer/F2516968/seq_eevee.blend) * Tweak scene exposure * Change current frame **Extra notes** Surprisingly, the render engine is always the one from the Scene Strip scene, even if another scene is rendered.
Dalai Felinto was assigned by Clément Foucault 2018-03-27 15:30:59 +02:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem

More info: For testing changing color management exposure should be enough to trigger the bug, however you also need to change the frame to see the issue.

Also I animated the file, and now I can no longer reproduce the issue with it (the original file still has the bug, obviously):
seq_eevee_animated.blend

More info: For testing changing color management exposure should be enough to trigger the bug, however you also need to change the frame to see the issue. Also I animated the file, and now I can no longer reproduce the issue with it (the original file still has the bug, obviously): [seq_eevee_animated.blend](https://archive.blender.org/developer/F2538219/seq_eevee_animated.blend)

Added subscriber: @Sergey

Added subscriber: @Sergey

While --enable-copy-on-write will assert if you try opening this file (P648 if @Sergey is interested), when re-creating from scratch the error is still there.

While `--enable-copy-on-write` will assert if you try opening this file ([P648](https://archive.blender.org/developer/P648.txt) if @Sergey is interested), when re-creating from scratch the error is still there.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed on 26b9c502ed and in 9f60c850f9.

Fixed on 26b9c502ed and in 9f60c850f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54437
No description provided.